<resources>
    <string name="action_settings">Settings</string>
    <string name="app_name">Quick Express</string>
    <string name="back">Volver</string>
    <string name="haexplotado">TE HA EXPLOTADO</string>
    <string name="hello_world">Hello world!</string>
    <string name="instrucciones">"¡Quick Expression es rápido y divertido!

Un juego de palabras rápido para dos equipos.

Di tantas pistas como puedas para describir la palabra que aparece en el móvil. Cuando alguien de tu equipo adivine la palabra antes de que haya finalizado el tiempo, pulsa al botón "siguiente" y pasa el móvil al equipo contrario...

Pero, ojo!!!! si el tiempo finaliza mientras tienes en tus manos el móvil, el equipo contrario gana el punto.

El equipo que llegue a la casilla "llegada", gana la partida.

Reglas:
 - No se puede decir una palabra que rime con la palabra que hay que adivinar.
 - No se puede decir cualquier parte de la palabra en las pistas explicativas : (Vajilla, lavavajillas)."

¡Prepárate...para empezar a hablar!</string>
    <string name="otrogana1punto">ANOTA 1 PUNTO AL OTRO EQUIPO</string>
    <string name="palabra">Siguiente</string>
    <string name="title_activity_fin_de_juego">FinDeJuego</string>
    <string name="title_activity_inicio">Inicio</string>
    <string name="title_activity_instrucciones">Instrucciones</string>
    <string name="Jugar">Jugar</string>
    <string name="Instrucciones">Instrucciones</string>
    <string name="Logo">Logo</string>
    <string name="Volver">Volver</string>
    <string name="MenuPrincipal">MenuPrincipal</string>
</resources>