<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:background="@color/MaterialRed"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"

    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="0.5">

        <ImageView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            android:contentDescription="@string/Logo"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="0.5">

        <Button
            android:textSize="25.0sp"
            android:id="@+id/BotonJugar"
            android:textColor="@color/MaterialWhite"
            android:layout_gravity="center"
            android:background="@drawable/button_selector"
            android:layout_width="200.0dip"
            android:layout_height="wrap_content"
            android:text="@string/Jugar"
            android:textAllCaps="false"
            android:layout_centerVertical="true"
            android:layout_alignStart="@+id/BotonInstrucciones" />

        <Button
            android:textSize="25.0sp"
            android:textColor="@color/MaterialWhite"
            android:background="@drawable/button_selector"
            android:layout_width="200.0dip"
            android:layout_height="wrap_content"
            android:text="@string/Instrucciones"
            android:textAllCaps="false"
            android:id="@+id/BotonInstrucciones"
            android:layout_below="@+id/BotonJugar"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

</LinearLayout>